--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,10 @@
+#header {
+   height: 100px;
+}
+
 #hero {
    /* This is temporary, let content dictate the size */
-   height: 300px;
+   height: 500px;
 }
 
 #products {
@@ -8,7 +12,7 @@
 }
 
 #services {
-   height: 700px;
+   height: 500px;
 }
 
 #footer {
